# NiceMake

./: .travis.yml  CHANGELOG.md  CompilerFlags.cmake  Doxygen.cmake  DoxygenGenericCfg.in  GTest.cmake  GTestBuild.cmake.in  GTestDownload.cmake.in  NiceMake.cmake  NiceMakeConfig.cmake  Options.cmake  Platform.cmake  README.md  Sanitizers.cmake  TargetCreation.cmake  ThirdPartyLibs.cmake  appveyor.yml
detail/: TargetProperties.cmake  Utils.cmake
doc/: Manual.md
experimental/: CollectObjsFromSubdirectories.cmake
tests/: CMakeLists.txt  CheckResults.bash  README.md
tests/add-gtest/: CMakeLists.txt  RunTest-Unix.bash
tests/add-gtest/project/: CMakeLists.txt  Test.cpp
tests/build-lib/: CMakeLists.txt  RunTest-Unix.bash
tests/build-lib/project/: CMakeLists.txt  run.cpp
tests/build-lib/project/include/testlib/testmodule/: Foo.h
tests/build-lib/project/lib/testlib/: CMakeLists.txt
tests/build-lib/project/lib/testlib/testmodule/: CMakeLists.txt  Foo.cpp
tests/build-lib/testconfigs/OBJECT-SHARED/: ExpectedArtifacts.Windows  ExpectedArtifacts.Windows.VisualStudio
tests/build-lib/testconfigs/OBJECT-STATIC/: ExpectedArtifacts.Darwin
tests/build-lib/testconfigs/SHARED/: ExpectedArtifacts.Cygwin  ExpectedArtifacts.Darwin  ExpectedArtifacts.Linux  ExpectedArtifacts.Windows  ExpectedArtifacts.Windows.VisualStudio
tests/build-lib/testconfigs/STATIC/: ExpectedArtifacts.Cygwin  ExpectedArtifacts.Darwin  ExpectedArtifacts.Windows  ExpectedArtifacts.Windows.VisualStudio
tests/build-tool/: CMakeLists.txt  RunTest-Unix.bash
tests/build-tool/project/: CMakeLists.txt
tests/build-tool/project/tools/: CMakeLists.txt
tests/build-tool/project/tools/testtool/: CMakeLists.txt  testtool.cpp
tests/build-tool/testconfigs/: ExpectedArtifacts.Cygwin  ExpectedArtifacts.Darwin  ExpectedArtifacts.Windows.VisualStudio
tests/compilerflags/: CMakeLists.txt  RunTest-Unix.bash
tests/compilerflags/project/: CMakeLists.txt
tests/compilerflags/project/nm_enable_release_assertions/: CMakeLists.txt
tests/compilerflags/project/nm_enable_release_assertions/SubDir/: CMakeLists.txt
tests/include/: SymbolVisibility.h
tests/thirdparty-lib/: CMakeLists.txt  RunTest-Unix.bash
tests/thirdparty-lib/project/: CMakeLists.txt
tests/thirdparty-lib/project/dummy-thirdparty-libs/: CMakeLists.txt
tests/thirdparty-lib/project/dummy-thirdparty-libs/modern/: CMakeLists.txt  ModernThirdParty.cpp  ModernThirdParty.h
tests/thirdparty-lib/project/dummy-thirdparty-libs/traditional/: CMakeLists.txt  TraditionalThirdParty.cpp  TraditionalThirdParty.h
tests/thirdparty-lib/project/include/testsharedlib/: Shared.h
tests/thirdparty-lib/project/include/testsharedlib/objsharedlib/: ObjShared.h
tests/thirdparty-lib/project/include/teststaticlib/: Static.h
tests/thirdparty-lib/project/include/teststaticlib/objlib/: Obj.h
tests/thirdparty-lib/project/lib/: CMakeLists.txt
tests/thirdparty-lib/project/lib/testsharedlib/: CMakeLists.txt  Shared.cpp
tests/thirdparty-lib/project/lib/testsharedlib/objsharedlib/: CMakeLists.txt  ObjShared.cpp
tests/thirdparty-lib/project/lib/teststaticlib/: CMakeLists.txt  Static.cpp
tests/thirdparty-lib/project/lib/teststaticlib/objlib/: CMakeLists.txt  Obj.cpp
tests/thirdparty-lib/project/tools/: CMakeLists.txt
tests/thirdparty-lib/project/tools/run/: CMakeLists.txt  Run.cpp
tests/thirdparty-lib/testconfigs/: ExpectedArtifacts.Cygwin  ExpectedArtifacts.Darwin  ExpectedArtifacts.Windows.VisualStudio
tests/unit/: CMakeLists.txt  RunTest-Unix.bash
tests/unit/project/: CMakeLists.txt
tests/unit/project/detail/: CMakeLists.txt  TargetPropertiesTests.cmake
